[package]
name = "limitless"
version = "0.1.0"
edition = "2024"
authors = ["Ken Cross <ken.q.cross@gmail.com"]

[lib]
name = "limitless"
path = "src/lib.rs"

[[bin]]
name = "limitless"
path = "src/main.rs"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
cfg-if = "1.0"
crossbeam = "0.8"
usdt = "0.6.0"

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[dev-dependencies]
criterion = "0.8.2"
